[package]
name = "plutus-be"
version = "0.1.0"
edition = "2021"
authors = ["Francis Masha <francismasha96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.1"
actix-rt = "2.5.0"
actix-web = "4.0.0-beta.13"
actix-web-httpauth = "0.6.0-beta.4"
alcoholic_jwt = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.18"
r2d2 = "0.8.9"
reqwest = "0.11.7"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
