[package]
name = "plutus-be"
version = "0.1.0"
edition = "2018"
authors = ["Francis Masha <francismasha96@gmail.com>"]

[dependencies]
actix-service = "2.0.1"
actix-rt = "2.5.0"
actix-web = "4.0.0-beta.13"
actix-cors = "0.5.4"
log = "0.4.14"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.9.0"
failure = "0.1.8"
futures = "0.3.18"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde_derive = "1.0.130"
serde_json = "1.0.72"
bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
diesel_migrations = "1.4.0"
derive_more = "0.99.17"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.redis]
version = "0.17.0"
features = ["tokio-comp"]

[dev-dependencies]
mockall = "0.8.3"

[dev-dependencies.diesel]
version = "1.4.5"
features = ["sqlite", "r2d2", "chrono"]
